# evaluation

./: .gitignore  .gitmodules  LICENSE  MIXED_CDF  Makefile  README.md  bundler-cross-exp.py  bundler-exp.py  bundlerConfig  calc.py  categorize.py  ccp.py  columnize.py  config.py  cross-exps.py  crossTrafficConfig  do-exps.sh  do-iperf-exps.py  do-proxy-exp.py  eval.py  exp.py  fct-exps.py  fcts.r  get-bk-schemes-results.sh  get-elastic-cr-results.sh  get-inelastic-cr-results.py  get-lowdelay-results.sh  get-pl-varload-results.sh  get-proxy-results.sh  get-twobundler-results.sh  graph.py  iperf-exp.py  iperf-nobundler-exp.py  lowdelay-exps.py  many-fct-exps.sh  nobundler-sfq.py  parse_outputs.py  plot-fct-results.sh  proxy-exp.py  rebuild_rmd.sh  (+15 more)
cloud/: Cargo.toml  README.md  aws-berkeley.py  ec2-rtts.r  generate_machine_pairs.py  get_rtts.py  machines.json  mit-aws.py  parse_udping.py  parse_udping_iters.py  plot_ccp.py  plot_ccp_log.r  plot_paths.r  plot_paths_iters.r
cloud/src/: lib.rs  main.rs
cloudlab/: cloudlab.py
configs/: fig10.toml  fig12.toml  fig13.toml  fig6.toml  fig7.toml  fig8.toml  fig9-bundler.toml  fig9-status-quo.toml
distributions/: BIG_CDF  CAIDA_CDF  TINY_CDF
