[package]
name = "cloud"
version = "0.1.0"
authors = ["Akshay Narayan <akshayn@mit.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tsunami = {path = "./tsunami"}
structopt = "0.2"
rusoto_core = "0.40"
failure = "0.1"
regex = "1"
lazy_static = "1"
slog = "2"
