[package]
name = "cloud"
version = "0.1.0"
authors = ["Akshay Narayan <akshayn@mit.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.8"
regex = "1"
serde = { version = "1", features = ["derive"]}
serde_json = "1"
structopt = "0.2"
tsunami = "0.11.0-beta.9"
color-eyre = "0.5"
tracing = "0.1"
tracing-subscriber = "0.2"
openssh = "0.6"
tokio = { version = "0.2", features = ["rt-threaded"] }
lazy_static = "1"
tracing-futures = "0.2"
futures-util = "0.3.5"
